--- a/flux/clusters/isonet/flux-system/kustomization.yaml
+++ b/flux/clusters/isonet/flux-system/kustomization.yaml
@@ -7,6 +7,8 @@ spec:
   interval: 10m
   path: "./"
   prune: true
+  decryption:
+    provider: sops
   sourceRef:
     kind: GitRepository
     name: flux-repo
