--- a/flux/clusters/isonet/apps/longhorn-system/kustomization.yaml
+++ b/flux/clusters/isonet/apps/longhorn-system/kustomization.yaml
@@ -3,3 +3,5 @@ kind: Kustomization
 namespace: longhorn-system
 resources:
   - azure-storage-secret.yaml
+  - helmrelease.yaml
+  - helmrepository.yaml
