--- a/flux/infrastructure/configs/storage/kustomization.yaml
+++ b/flux/infrastructure/configs/storage/kustomization.yaml
@@ -1,10 +1,11 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: test
+  name: azure-storage-account-keys
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 10m
   path: flux/infrastructure/configs/storage/azure_storage_account_keys/
   prune: true
   sourceRef:
