--- a/flux/infrastructure/configs/storage/kustomization.yaml
+++ b/flux/infrastructure/configs/storage/kustomization.yaml
@@ -3,3 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - storage_account_keys_kustomization.yaml
+  - storage-settings.yaml
