--- a/flux/infrastructure/controllers/ingress/kustomization.yaml
+++ b/flux/infrastructure/controllers/ingress/kustomization.yaml
@@ -1,6 +1,6 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - certificates
-  - storage
+  - helm-release.yaml
+  - helm-repository.yaml
+  - namespace.yaml
